Fix for OA-1012, newer bigger logo with readable tagline

--- a/www/admin/css/chrome.css
+++ b/www/admin/css/chrome.css
@@ -36,12 +36,16 @@ a:hover {
 }
 
 .brandingDefault {
-	width: 168px;
+	width: 170px;
 	height: 62px;
 	background: url(../images/logo-wtag.png) no-repeat;
 	margin: 3px 0px 0px 3px;
 	text-indent: -1000px;
+  /* Fix IE bug: transparent PNG support */
+  -background: none;
+  -filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/logo-wtag.png');
 }
+
 .brandingName {
 	height: 48px;
 	padding: 0 0 0 52px;
